--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,3 +18,6 @@
     state: present
     regexp: "^%{{ fr_user }}"
     line: "%{{ fr_user }} ALL=(ALL) NOPASSWD: ALL"
+
+- include_tasks: "installPackages"
+  when: forgerock_common_install_packages
